# Wikisync

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  fly.toml  run.sh
docs/: Future.md  stack-justification.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AppLayout.tsx  api.ts  index.css  main.tsx  store.ts
frontend/src/components/: CreatePageModal.tsx  PageTree.tsx  SharedWithMe.tsx  TableOfContents.tsx  VersionHistory.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx  WikiPage.tsx
migrations/: 001_init.sql  002_versions.sql
scripts/: stress_test.sh
src/: main.rs  static_files.rs
src/db/: mod.rs
src/middleware/: auth.rs
src/models/: mod.rs
src/routes/: auth.rs  markdown.rs  mod.rs  pages.rs
src/ws/: handler.rs  mod.rs  room.rs
stress-results/: report_20260406_034457.txt  report_20260406_035146.txt
