[package]
name = "wiki-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wiki-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (SQLite — single-binary, no external server needed)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Markdown & XSS sanitization
pulldown-cmark = "0.9"
ammonia = "3"

# Slugs
slug = "0.1"

# Errors & tracing
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Config from env
dotenvy = "0.15"

# Embed static files into binary for single-binary deployment
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# HTTP utilities
headers = "0.4"

# Futures utilities (stream/sink for WebSockets)
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
